# TFM_O3DE

./: CMakeLists.txt  InstalarO3DE.md  README.md  crear_prefab.py  package.xml
src/: test_moveit.cpp  yolo_moveit.cpp
